# bless

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  README.md  bismillah.py  bless.pyproject  bless.pyproject.user.dist  custom_email_password_form.html  email_password_form.html  index.html  index_old.html  main.py  pyproject.toml  setup.cfg  windows.py
.github/: dependabot.yml
bless/: main.py
bless/dquran/: windows.py
bless/duser/: views.py  windows.py
bless_qt/: start.py
bless_qt/dquran/: models.py  views.py
bless_qt/dquran/qml/: main.qml
bless_qt/duser/: views.py
bless_qt/duser/qml/: main.qml
